[package]
name = "screenclip-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "shell-open", "system-tray", "devtools"] }
window-shadows = "0.2.1"
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
win_desktop_duplication =  { path = "../crates/win_desktop_duplication" }
tokio = { version = "1.28.2", features = ["full"] }
screenshots = "0.6.0"
base64 = "0.21.2"
display-info = "0.4.2"
video-rs =  { path = "../crates/video-rs", features = ["ndarray"] }
# video-rs = { git = "https://github.com/oddity-ai/video-rs.git", features = ["ndarray"] }
# ffmpeg-next = { version = "6.0.0", features = ["codec", "filter", "format", "software-resampling", "software-scaling"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

anyhow = "1.0.75"
ndarray = { version = "0.15" }

[dependencies.windows]
version = "0.39.0"
features = ["Win32_System_Com"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
